--- a/src/dashboard.css
+++ b/src/dashboard.css
@@ -69,3 +69,18 @@ tr:hover {
     font-size: 1.5rem;
     margin-bottom: 20px;
 }
+button{
+    display: block;
+    width: 100%;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    background-color: #007bff;
+    color: #fff;
+    font-size: 18px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #0069d9;
+}
